REGRESSION (r276370): Elements with animated transform property might not properly rendered https://bugs.webkit.org/show_bug.cgi?id=230753

Reviewed by Myles C. Maxfield.

Source/WebCore:

The change in r276370 was incorrect, resulting in the geometry map being used when
an element had a transform and `transform-style: preserves-3d`.

Fix by going back to testing for the presence of the various transform properties which
affect geometry. hasTransformRelatedProperty() is still useful as a fast bit-check.

Test: fast/repaint/transform-preserve-3d-repaint.html

* rendering/RenderGeometryMap.cpp:
(WebCore::canMapBetweenRenderersViaLayers):

LayoutTests:

* fast/repaint/transform-preserve-3d-repaint-expected.txt: Added.
* fast/repaint/transform-preserve-3d-repaint.html: Added.


Canonical link: https://commits.webkit.org/243056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284247 268f45cc-cd09-0410-ab3c-d52691b4dbfc