Source/WebCore/rendering/RenderGeometryMap.cpp
@@ -150,7 +150,7 @@ static bool canMapBetweenRenderersViaLayers(const RenderLayerModelObject& render
         if (current->isFixedPositioned() || style.isFlippedBlocksWritingMode())
             return false;
 
-        if (current->hasTransformRelatedProperty() && !current->style().preserves3D())
+        if (current->hasTransformRelatedProperty() && (style.hasTransform() || style.translate() || style.scale() || style.rotate() || style.hasPerspective()))
             return false;
         
         if (current->isRenderFragmentedFlow())
